app/service-a/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-a
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100Mdfg
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: service-a.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-a
            port:
              number: 80
